# colette

./: .dockerignore  .gitignore  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile.images  Makefile  README.md  create_venv_colette.sh  create_venv_colette_ARM.sh  create_venv_colette_DGX.sh  docker-compose-backend-local-container.yml  docker-compose-backend-ui-local-container.yml  docker-compose-backend-ui.yml  docker-compose-backend.yml  docker-compose.yml  pyproject.toml  pyproject_ARM.toml  pyproject_DGX.toml  pytest.ini  requirements_cpu_build.txt
.github/workflows/: nightly-gpu-matrix.yml  pr-optional-integration.yml  pr-smoke.yml
apps/coder/: README.md  create_coder.sh
ci/: build_container_images.sh  container_integration.sh  container_preflight.sh  container_smoke.sh  requirements-full.txt  requirements-smoke.txt  setup_venv.sh  verify_smoke_imports.py
docker/: cpu_build.Dockerfile  cpu_server.Dockerfile  entrypoint.sh  gpu_build.Dockerfile  gpu_jb_server.Dockerfile  gpu_server.Dockerfile  ui.Dockerfile
docs/: INTEGRATION_TESTING.md
docs/source/: features.md  index.rst  openapi.json  tutorial_website.md
docs/source/developers/: container_rebuild.md  deployment.md  integration_testing.md  jenkins_pipeline.md  setup.md
docs/source/users/: configuration.md  data.md  get_started.md  get_started_ARM_machine.md  get_started_DGX_machine.md  local_rest_api_server.md  openwebui.md  server.md  text_search_engine.md  ui.md
examples/: crop_viewer.ipynb  get_start_python_api.ipynb  get_start_python_api.py  retrieval_debugger.ipynb  text_search_demo.ipynb  text_search_demo.py  visualize_embeddings.ipynb
scripts/: install_python_deps.sh  preflight_integration.sh
scripts/pipeline/: README.md  full_pipeline_emb_gme_qwen2vl.py  full_pipeline_qwen3vl.py
server/: init_services.py  run_local_rest_api_server.py
src/colette/: README.md  apidata.py  colette_cli.py  httpjsonapi.py  jsonapi.py  kvstore.py  llmservice.py  services.py  ui_requirements.txt
src/colette/backends/coldb/: coldb.py  embedder.py  searcher.py
src/colette/backends/hf/: attention.py  hfinputconn.py  hflib.py  hfmodel.py  hyde_generator.py  (+4 more)
src/colette/config/: vrag_default.json  vrag_default_index.json  vrag_default_lite.json
src/colette/ui/: app.py
tests/: base_img_helpers.py  base_text_helpers.py  conftest.py  test_apidata_rag_merge.py  test_base.py  test_base_ci.py  test_base_img.py  test_base_img_coldb.py  test_base_img_hf_multi.py  test_base_img_hf_shared.py  test_base_img_hf_single.py  test_base_img_reindex.py  test_base_img_vllm.py  test_base_text_info.py  test_base_text_llamacpp.py  test_base_text_ollama.py  test_base_text_vllm.py  test_cli.py  test_cli_smoke.py  test_colbert.py  test_coldb.py  test_configs.py  test_core_services_smoke.py  test_diffusr.py  test_embedding_integration.py  test_embedding_loader.py  test_evaluation.py  test_external_vllm.py  test_full_pipeline_emb_gme_qwen2vl.py  test_full_pipeline_qwen3vl.py  test_http_openwebui_smoke.py  test_jsonapi_helpers_smoke.py  test_jsonapi_service_smoke.py  test_kvstore_smoke.py  test_logger_smoke.py  test_logging_payload.py  test_multiple_creation.py  test_pipeline_python_api_integration.py  test_pipeline_tantivy_integration.py  test_preprocessing.py  (+6 more)
tests_optional/evaluation_contract/: conftest.py  test_configs_contract.py  test_hf_single_contract.py
tools/: README.md  benchmark_retriever.py  diagnose_embeddings.py  find_vectors.py
tools/dse/qwen2/: fix_paths.py  generate_dataset.py  launch_custom.sh
tools/dse/qwen25/: launch.sh
tools/dse/qwen3/: README.md  dse.py  launch.sh
(+12 files in other folders)
